# ansible-role-container-registry

./: .ansible-lint  .gitignore  .gitreview  README.md  README.rst  ansible-requirements.txt  ansible.cfg  bindep.txt  molecule-requirements.txt  requirements.txt  setup.cfg  tox.ini
ci-scripts/: ansible-lint.sh
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: molecule.yml  playbook.yml  prepare.yml
molecule/login/: molecule.yml  playbook.yml  prepare.yml
tasks/: cleanup-engine.yml  docker-distribution.yml  docker-login.yml  docker-update.yml  docker.yml  install-engine.yml  main.yml  registry-login.yml
templates/: docker-daemon.json.j2  docker-distribution-config.yml.j2
tests/: test.yml
vars/: main.yml
zuul.d/: base.yaml  layout.yaml
zuul.d/playbooks/: pre.yml  run.yml
