[metadata]
name = container-registry
summary = container-registry - Ansible role to deploy a container registry
description-file =
    README.md
author = TripleO Team
author-email = emilien@redhat.com
home-page = https://git.openstack.org/cgit/openstack/ansible-role-container-registry
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/container-registry/defaults = defaults/*
    usr/local/share/ansible/roles/container-registry/handlers = handlers/*
    usr/local/share/ansible/roles/container-registry/meta = meta/*
    usr/local/share/ansible/roles/container-registry/tasks = tasks/*
    usr/local/share/ansible/roles/container-registry/templates = templates/*
    usr/local/share/ansible/roles/container-registry/tests = tests/*
    usr/local/share/ansible/roles/container-registry/vars = vars/*
    usr/local/share/ansible/roles/container-registry/files = files/*
    playbooks = playbooks/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

