[metadata]
name = ansible-role-container-registry
summary = ansible-container-registry - Ansible role to deploy a container registry
description-file =
    README.rst
author = TripleO Team
author-email = emilien@redhat.com
home-page = https://opendev.org/openstack/ansible-role-container-registry
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/container-registry/defaults = defaults/*
    share/ansible/roles/container-registry/handlers = handlers/*
    share/ansible/roles/container-registry/meta = meta/*
    share/ansible/roles/container-registry/tasks = tasks/*
    share/ansible/roles/container-registry/templates = templates/*
    share/ansible/roles/container-registry/tests = tests/*
    share/ansible/roles/container-registry/vars = vars/*
    share/ansible/roles/container-registry/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

